# bit-torrent-rs

./: .gitignore  Cargo.toml
examples/: Novembre.torrent  The Matrix 4 - Resurrections.torrent
src/: lib.rs  main.rs  shared.rs
src/connection/: client.rs
src/engine/: context.rs  downloader.rs  manager.rs  mod.rs
src/protocol/: tracker.rs
src/serializer/: bytes.rs  formatter.rs  mod.rs  parser.rs
src/types/: bencode.rs  bitfield.rs  message.rs  mod.rs  peer.rs  piece.rs
src/utils/data/: calculator.rs  manipulator.rs  mod.rs
